--- a/WurpTerminal.csproj
+++ b/WurpTerminal.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyName>warp-terminal</AssemblyName>
+    <AssemblyName>wurp-terminal</AssemblyName>
     <PublishSingleFile>true</PublishSingleFile>
     <PublishTrimmed>false</PublishTrimmed>
     <SelfContained>false</SelfContained>
