--- a/wurp-config.json
+++ b/wurp-config.json
@@ -1,90 +1,86 @@
 {
   "project": {
-    "name": "wurp-terminal",
-    "binary_name": "wurp-terminal",
-    "target_framework": "net8.0",
-    "runtime": "linux-x64"
-  },
-  "paths": {
-    "build_dir": "bin/Release/net8.0",
-    "publish_dir": "bin/Release/net8.0/publish",
-    "user_bin": "$HOME/.local/bin",
-    "desktop_dir": "$HOME/.local/share/applications"
+    "name": "Wurp (Warp Terminal Clone)",
+    "description": "AI-Powered Terminal built with .NET 8",
+    "version": "1.0.0",
+    "binary_name": "wurp-terminal"
   },
   "dependencies": {
     "required": [
       {
-        "name": "dotnet",
+        "name": ".NET 8 SDK",
         "command": "dotnet",
-        "version_check": "dotnet --version",
-        "min_version": "8.0",
-        "install_hint": "Install .NET 8 SDK from Microsoft"
-      },
-      {
-        "name": "curl",
-        "command": "curl",
-        "install_hint": "sudo apt install curl"
+        "install_hint": "Install from https://dotnet.microsoft.com/download"
       },
       {
         "name": "jq",
         "command": "jq",
-        "install_hint": "sudo apt install jq"
+        "install_hint": "sudo apt install jq (Ubuntu) or brew install jq (macOS)"
+      },
+      {
+        "name": "curl",
+        "command": "curl",
+        "install_hint": "sudo apt install curl (Ubuntu) or brew install curl (macOS)"
       }
     ],
     "optional": [
       {
-        "name": "git",
-        "command": "git",
-        "install_hint": "sudo apt install git"
+        "name": "FreelanceAI",
+        "description": "AI API service for enhanced responses"
+      },
+      {
+        "name": "Ollama",
+        "description": "Local AI model runner"
       }
     ]
   },
+  "build": {
+    "dotnet_args": {
+      "build": "-c Release",
+      "publish": "-c Release --self-contained false"
+    },
+    "clean_dirs": [
+      "bin",
+      "obj"
+    ]
+  },
+  "paths": {
+    "publish_dir": "bin/Release/net8.0/publish",
+    "user_bin": "$HOME/.local/bin",
+    "desktop_dir": "$HOME/.local/share/applications"
+  },
   "shell_integration": {
-    "marker": "# Warp Terminal Integration",
-    "bashrc_path": "$HOME/.bashrc",
+    "marker": "# Wurp Terminal Integration",
+    "shells": {
+      "bash": {
+        "rc_file": "$HOME/.bashrc"
+      },
+      "zsh": {
+        "rc_file": "$HOME/.zshrc"
+      }
+    },
     "aliases": [
       "alias wt='wurp-terminal'",
       "alias wurp='wurp-terminal'"
     ],
-    "functions": [
-      "warp_explain",
-      "warp_suggest",
-      "warp_debug"
-    ],
     "quick_aliases": [
-      "alias explain='warp_explain'",
-      "alias suggest='warp_suggest'",
-      "alias debug='warp_debug'"
+      "alias explain='wurp-terminal ai explain'",
+      "alias suggest='wurp-terminal ai suggest'",
+      "alias debug='wurp-terminal ai debug'"
     ]
   },
   "services": {
     "freelance_ai": {
       "health_url": "http://localhost:5000/health",
-      "api_base": "http://localhost:5000/api",
-      "start_hint": "cd /path/to/freelance-ai && dotnet run --project src/FreelanceAI.WebApi"
+      "description": "FreelanceAI API service"
     },
     "ollama": {
       "health_url": "http://localhost:11434/api/tags",
-      "models_limit": 3
+      "description": "Ollama local AI service"
     }
-  },
-  "build": {
-    "clean_dirs": ["bin", "obj"],
-    "dotnet_args": {
-      "build": "-c Release",
-      "publish": "-c Release -r linux-x64 --self-contained false"
-    }
-  },
-  "colors": {
-    "red": "\\033[0;31m",
-    "green": "\\033[0;32m",
-    "yellow": "\\033[1;33m",
-    "blue": "\\033[0;34m",
-    "cyan": "\\033[0;36m",
-    "nc": "\\033[0m"
   },
   "desktop_entry": {
-    "name": "Warp Terminal Clone",
+    "name": "Wurp (Warp Terminal Clone)",
     "comment": "AI-Powered Terminal built with .NET",
     "icon": "utilities-terminal",
     "categories": "System;TerminalEmulator;",
