created stand-alone version for development

--- a/WurpTerminal.csproj
+++ b/WurpTerminal.csproj
@@ -8,5 +8,10 @@
     <PublishSingleFile>true</PublishSingleFile>
     <PublishTrimmed>false</PublishTrimmed>
     <SelfContained>false</SelfContained>
+    <Version>1.0.0</Version>
+    <AssemblyTitle>Wurp Terminal - AI-Powered Terminal Clone</AssemblyTitle>
+    <Product>Wurp Terminal</Product>
+    <Description>A modern terminal emulator with AI integration, built with .NET 8</Description>
+    <Copyright>Copyright © 2024</Copyright>
   </PropertyGroup>
 </Project>
